# clpsr

./: .gitignore  AGENTS.md  Cargo.toml  MANUAL.md  README.md  nextest.toml
.cursor/plans/: colorized_output_70b8d07d.plan.md  comments_annotations_preservation_a1864413.plan.md  configuration_file_support_a535932c.plan.md  diff_comparison_mode_1e3c8fec.plan.md  exclusion_filtering_bfef574c.plan.md  ipv6_support_280a92e4.plan.md  maximum_prefix_length_constraint_38cd9107.plan.md  multiple_input_files_04723d29.plan.md  network_information_display_ddf9e777.plan.md  output_format_options_3f1ec1f6.plan.md  progress_indicator_661dc53e.plan.md  split_expand_operation_98452eea.plan.md  statistics_verbose_mode_43886666.plan.md  validation_check_mode_b53d5d11.plan.md
.github/workflows/: ci.yml  release.yml
Formula/: clpsr.rb
benches/: merge_bench.rs  parse_bench.rs
docs/: feature-ideas.md  implementation-roadmap.md
src/: lib.rs  main.rs
tests/: integration_test.rs
