[package]
name = "clpsr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "clpsr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ipnet = "2.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_bench"
harness = false

[[bench]]
name = "merge_bench"
harness = false
